<!--
  ~ The MIT License (MIT)
  ~
  ~    Copyright (c) 2016 Marco Gomiero
  ~
  ~    Permission is hereby granted, free of charge, to any person obtaining a copy
  ~    of this software and associated documentation files (the "Software"), to deal
  ~    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~    copies of the Software, and to permit persons to whom the Software is
  ~    furnished to do so, subject to the following conditions:
  ~
  ~    The above copyright notice and this permission notice shall be included in all
  ~    copies or substantial portions of the Software.
  ~
  ~    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
  ~    THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~    SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Piztu Lizarra</string>

    <string name="action_about">About</string>
    <string name="action_blog">Blog</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_instagram">Instagram</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_mail">Mail</string>

    <string name="alert_title">Atención!</string>
    <string name="alert_message">Imposible cargar el contenido. \nRevisa tu conexión a internet!</string>
    <string name="alert_positive">Close</string>
    <string name="video">Video</string>
     <string name="info_text">App para estar informad@ en todo momento de el blog Lizarrako Gaztetxea.
         &lt;br /&gt;&lt;br /&gt;You can find the source code on </string>
    <string name="author">&lt;br /&gt;&lt;br /&gt;Written by Marco Gomiero</string>
</resources>
