<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prof.rssparser.example.MainActivity">
    <item
        android:id="@+id/action_blog"
        android:orderInCategory="100"
        android:title="@string/action_blog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_instagram"
        android:orderInCategory="100"
        android:title="@string/action_instagram"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_twitter"
        android:orderInCategory="100"
        android:title="@string/action_twitter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mail"
        android:orderInCategory="100"
        android:title="@string/action_mail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
